# taka_the_discord_bot_api

./: .gitmodules  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/api/: mod.rs
src/api/v1/: mod.rs
src/api/v1/controllers/: mod.rs  silly_command_controller.rs  user_controller.rs
src/api/v1/middlewares/: auth.rs
src/api/v1/models/: mod.rs  silly_command.rs  user.rs
src/api/v1/services/: mod.rs  silly_command.rs  users.rs
src/api/v1/sql/users/: create_user.sql  delete_user.sql  fetch_user_by_email.sql  fetch_user_by_id.sql  update_user.sql  update_user_password.sql  user_exists.sql
