[package]
name = "taka_the_discord_bot_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {version="1.0.5", features=["fetch"]}
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
axum = "0.7.2"
tetrio-api = "0.3.0"
tokio = {version = "1.28.0", features = ["full"]}
sqlx = { version = "0.7.2", features = [ "runtime-tokio-native-tls", "postgres" ]}
dotenvy = "0.15.7"
log = "0.4.20"
flexi_logger = "0.27.3"
rand = "0.8.5"
itertools = "0.12.0"
moka = {version = "0.12", features = ["future"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
