[package]
name = "taka_the_discord_bot_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {version="1.0.5", features=["fetch"]}
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
axum = {version = "0.7.2", features = ["multipart"]}
tetrio-api = {path = "../tetrio-api", optional = true}
tokio = {version = "1.28.0", features = ["full"]}
sqlx = { version = "0.8.2", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "uuid"], optional = true}
dotenvy = "0.15.7"
log = "0.4.20"
flexi_logger = "0.29"
common = {path = "../taka_the_discord_bot_common" }
itertools = "0.13.0"
moka = {version = "0.12", features = ["future"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
anyhow = "1.0.75"
axum-extra = { version = "0.9.0", features = ["cookie"] }
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.2"
chrono = {version = "0.4.31", features = ["serde"]}
time = "0.3.30"
urlencoding = "2.1.3"
redis = "0.26.1"


[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[features]
database = ["sqlx"]
tetrio = ["tetrio-api"]
full = ["database", "tetrio"]
default = ["full"]
